--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,6 +19,7 @@
             <p id="progress-bar"></p>
           </div>
           <input type="submit" value="Valider" />
+          <input type="button" value="Deconnection" />
         </div>
         </form>
         
@@ -33,20 +34,20 @@
 
           <div class="email-container">
             <label for="email">Email</label>
-            <input name="email" type="text" autocomplete="off" id="email" />
+            <input name="email" type="text" autocomplete="off" id="emailInscription" />
             <span>Email incorrect</span>
           </div>
 
           <div class="password-container">
             <label for="password">Mot de passe</label>
-            <input name="password" type="password" autocomplete="off" id="password" />
+            <input name="password" type="password" autocomplete="off" id="passwordInscription" />
             <p id="progress-bar"></p>
             <span></span>
           </div>
 
           <div class="confirm-container">
             <label for="confirm">Confirmer mot de passe</label>
-            <input name="passwordConfirm" type="password" autocomplete="off" id="confirm" />
+            <input name="confirm" type="password" autocomplete="off" id="confirm" />
             <span></span>
           </div>
 
