--- a/templates/_components/header.html
+++ b/templates/_components/header.html
@@ -68,9 +68,9 @@
             id="iconSearch"
             class="fa-solid fa-magnifying-glass fa-2x space"
           ></i>
-          <a href="contact">
+          <button id="login">
             <i id="iconUser" class="fa-solid fa-user fa-2x space"></i>
-          </a>
+          </button>
         </div>
       </nav>
     </header>
