--- a/templates/acceuil.html
+++ b/templates/acceuil.html
@@ -4,6 +4,7 @@
 }) %>
 
 <main>
+  <%- include("_components/login.html") %>
       <div class="imgBackground">
         <img src="./images/bandeau-ile-vierge.webp" alt="photo-background" />
       </div>
