--- a/templates/admin.html
+++ b/templates/admin.html
@@ -2,10 +2,9 @@
   styles: ["formulaire"],
   title: "admin"
 }) %>
-<div class="container">
+<div class="adminContainer">
     <h2>Admin</h2>
-    <p>Welcome</p>
-    <p>Email</p>
+    <p>Bienvenue <%= user %> </p>
 </div>
 
 <%- include("_components/footer.html") %>
