--- a/templates/crozon.html
+++ b/templates/crozon.html
@@ -3,6 +3,7 @@
   title: "crozonn"
 }) %>
 <main>
+  <%- include("_components/login.html") %>
     <div class="section-bandeau">
       <img src="./images/photo-bandeau-crozon.jpg" width="100%" height="760px" alt="photo-glenan" />
     </div>
