--- a/templates/fouesnant.html
+++ b/templates/fouesnant.html
@@ -3,6 +3,7 @@
   title: "fouesnant"
 }) %>
 <main>
+  <%- include("_components/login.html") %>
       <div class="section-bandeau">
         <img
           src="./images/glenan-bandeau.jpg"
