--- a/templates/kerlouan.html
+++ b/templates/kerlouan.html
@@ -3,6 +3,7 @@
   title: "kerlouan"
 }) %>
 <main>
+    <%- include("_components/login.html") %>
       <div class="section-bandeau">
         <img
           src="./images/photo-bandeau-kerlouan.jpg"
