--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,27 +3,8 @@
   title: "contact"
 }) %>
 <main>
-    <form id="connection" action="/login" method="POST">
-      <div class="container">
-        <div class="connection">
-          <h3>Connection</h3>
-          <div class="email-container">
-            <label for="email">Email</label>
-            <input name="email" type="text" autocomplete="off" id="email" />
-            <span>Email incorrect</span>
-          </div>
-
-          <div class="password-container">
-            <label for="password">Mot de passe</label>
-            <input name="password" type="password" autocomplete="off" id="password" />
-            <p id="progress-bar"></p>
-          </div>
-          <input type="submit" value="Valider" />
-          <input type="button" value="Deconnection" />
-        </div>
-        </form>
-        
-        <form id="inscription" action="/inscription" method="POST">
+        <div class=containerForm>
+          <form id="inscription" action="/inscription" method="POST">
         <div class="inscription">
           <h3>Inscription</h3>
           <div class="pseudo-container">
