--- a/templates/_components/login.html
+++ b/templates/_components/login.html
@@ -1,4 +1,4 @@
-<form id="connection" action="/admin" method="POST">
+<form id="connection" action="/acceuil" method="POST">
           <h3>Connection</h3>
           <label for="email">Email</label>
           <input name="email" type="text" autocomplete="off" id="email" />
@@ -12,4 +12,5 @@
           <!--<span>Email ou mot de passe incorrect</span>-->
           <input type="submit" name="connection" value="Connection" />
           <button><a href="/logout">Déconnexion</a></button>
+          <button><a href="/contact">Inscription</a></button>
 </form>
