--- a/templates/fouesnant.html
+++ b/templates/fouesnant.html
@@ -17,10 +17,10 @@
       <div class="section-carte">        
         <img class="carte-bretagne" src="./images/carte-fouesnant.png" width="100%" alt="carte-fouesnant">
         <p>
-          <%=articles[0].content%>
+          <%=articles[0].article%>
         </p>
         <p>
-          <%=articles[1].content%>
+          <%=articles[1].article%>
         </p>
       </div>
       <div class="section">
@@ -35,9 +35,9 @@
           alt="photo-fouesnant"
         />
         <div class="article">
-          <p><%=articles[2].content%></p>
-          <p><%=articles[3].content%></p>
-          <p><%=articles[4].content%></p>
+          <p><%=articles[2].article%></p>
+          <p><%=articles[3].article%></p>
+          <p><%=articles[4].article%></p>
         </div>        
         </div>
 
@@ -52,10 +52,10 @@
           alt="photo-fouesnant"
         />
         <div class="article">
-        <p><%=articles[5].content%></p>
-        <p><%=articles[6].content%></p>
-        <p><%=articles[7].content%></p>
-        <p><%=articles[8].content%></p>
+        <p><%=articles[5].article%></p>
+        <p><%=articles[6].article%></p>
+        <p><%=articles[7].article%></p>
+        <p><%=articles[8].article%></p>
         </div>
         </div>
         <div class="subtitle"><h3><span>Plage de kerambigorn, Fouesnant</span></h3></div>
@@ -69,9 +69,9 @@
           alt="photo-fouesnant"
         />
         <div class="article">
-        <p><%=articles[9].content%></p>
-        <p><%=articles[10].content%></p>
-        <p><%=articles[11].content%></p>
+        <p><%=articles[9].article%></p>
+        <p><%=articles[10].article%></p>
+        <p><%=articles[11].article%></p>
         </div>
         
       </div>
@@ -87,9 +87,9 @@
           alt="photo-concarneau"
         />
         <div class="article">
-        <p><%=articles[12].content%></p>
-        <p><%=articles[13].content%></p>
-        <p><%=articles[14].content%></p>
+        <p><%=articles[12].article%></p>
+        <p><%=articles[13].article%></p>
+        <p><%=articles[14].article%></p>
         </div>
         
       </div>
