--- a/templates/_components/header.html
+++ b/templates/_components/header.html
@@ -50,24 +50,24 @@
           <img
             src="./images/drapeau-breton.webp"
             alt="drapeau breton"
-            width="180px"
-            height="90px"
+            width="180"
+            height="90"
           />
           <h1>Breizh</h1>
         </div>
-        <div class="login-search">
-          <form id="search" style="display: none">
-            <input
-              type="text"
-              placeholder="Pays, Ville, mots clé"
-              id="search-input"
-            />
-            <button type="submit"></button>
-          </form>
-          <i
-            id="iconSearch"
-            class="fa-solid fa-magnifying-glass fa-2x space"
-          ></i>
+        <!--<div class="login-search">-->
+          <!--<form id="search" style="display: none">-->
+          <!--  <input-->
+          <!--    type="text"-->
+          <!--    placeholder="Pays, Ville, mots clé"-->
+          <!--    id="search-input"-->
+          <!--  />-->
+          <!--  <button type="submit"></button>-->
+          <!--</form>-->
+          <!--<i-->
+          <!--  id="iconSearch"-->
+          <!--  class="fa-solid fa-magnifying-glass fa-2x space"-->
+          <!--></i>-->
           <button id="login">
             <i id="iconUser" class="fa-solid fa-user fa-2x space"></i>
           </button>
