--- a/templates/acceuil.html
+++ b/templates/acceuil.html
@@ -11,7 +11,7 @@
   
   <%- include("_components/login.html") %>
       <div class="imgBackground">
-        <img src="./images/bandeau-ile-vierge.webp" alt="photo-background" />
+        <img src="./images/bandeau-ile-vierge.webp" alt="" />
       </div>
       <div class="section-presentation">
         <img
