--- a/templates/fouesnant.html
+++ b/templates/fouesnant.html
@@ -8,19 +8,22 @@
         <img
           src="./images/glenan-bandeau.jpg"
           width="100%"
-          height="760px"
+          height="760"
           alt="photo-glenan"
-        />
+        >
       </div>
       <div class="title"><h2>Fouesnant</h2></div>
       
       <div class="section-carte">        
         <img class="carte-bretagne" src="./images/carte-fouesnant.png" width="100%" alt="carte-fouesnant">
         <p>
-          <%=articles[0].article%>
+          Commune du Finistère, Fouesnant prend place sur la côte cornouaillaise, à une quinzaine de kilomètres de Quimper et à dix
+          kilomètres de Concarneau. La ville bretonne forme ainsi, avec Bénodet et La Forêt-Fouesnant, la Riviera bretonne.
         </p>
         <p>
-          <%=articles[1].article%>
+          La ville de Bretagne est surtout un grand pôle touristique, dévoilant notamment des villas balnéaire du début du siècle dernier.Très appréciée pour ses différentes plages, l'archipel des
+          Glénan, la ville de Fouesnant dévoile également un important patrimoine architectural témoignant de plusieurs siècles
+          d'histoire, comme en témoignent les menhirs retrouvés sur place.
         </p>
       </div>
       <div class="section">
@@ -31,13 +34,19 @@
           src="./images/vue-aerienne-beg-meil-remake.png"
           class="photo-left"
           width="100%"
-          height="400px"
+          height="400"
           alt="photo-fouesnant"
-        />
+        >
         <div class="article">
-          <p><%=articles[2].article%></p>
-          <p><%=articles[3].article%></p>
-          <p><%=articles[4].article%></p>
+          <p>
+          Beg Meil est une presqu'île de la commune de Fouesnant. Ne manquez pas le chemin côtier qui borde la Baie de la Forêt : vous y découvrirez de magnifiques petites criques de sables blanc et à l'eau turquoise.          
+        </p>
+        <p>
+          Le chemin des douaniers offre une magnifique balade : vous découvrirez tour à tour la plage des oiseaux, petite plage avec un joli point de vue, la plage de Kerveltrec, et plage de Lantecost.
+        </p>
+        <p>
+          La plage de Lantecost est reconnaissable à son kiosque blanc. Il fait partie du parc du château de Bot Conan, datant à la Belle époque.
+        </p>
         </div>        
         </div>
 
@@ -48,14 +57,20 @@
           src="./images/photo-fouesnant-plage-des-oiseaux.jpg"
           class="photo-right"
           width="100%"
-          height="400px"
+          height="400"
           alt="photo-fouesnant"
-        />
+        >
         <div class="article">
-        <p><%=articles[5].article%></p>
-        <p><%=articles[6].article%></p>
-        <p><%=articles[7].article%></p>
-        <p><%=articles[8].article%></p>
+        <p>
+          Juste au sud du cap de Beg Meil, il y a une jolie enfilade de criques.
+        </p>
+        <p>
+          La crique des Oiseaux, appelée ainsi pour les nombreux cormorans qui se sèchent les ailes sur un rocher proche, est la première.
+        </p>
+        <p>
+           On y accède depuis le parking de la plage des Dunes en prenant la rue du Chemin Creux, puis le premier chemin à droite qui conduit au sentier littoral.
+        </p>
+        <p> Le prendre à droite. Bien abrité des vents d'ouest et du sud, on l'est un peu aussi prématurément du soleil en soirée.</p>
         </div>
         </div>
         <div class="subtitle"><h3><span>Plage de kerambigorn, Fouesnant</span></h3></div>
@@ -65,13 +80,19 @@
           src="./images/photo-fouesant-plage-de-kerambigorn.jpg"
           class="photo-left"
           width="100%"
-          height="400px"
+          height="400"
           alt="photo-fouesnant"
-        />
+        >
         <div class="article">
-        <p><%=articles[9].article%></p>
-        <p><%=articles[10].article%></p>
-        <p><%=articles[11].article%></p>
+        <p>
+            C’est du côté de Beg Meil à Fouesnant que l’on trouve la plage de Kerambigorn. 
+        </p>
+        <p>
+          Point de départ d’une vaste plage de sable (3.5 km en allant vers l’est) bordée par une agréable dune dans un environnement préservé, elle s’ouvre sur un océan souvent déchainé en hiver. Par temps dégagé on peut même voir l’archipel des Glénan (environ 15 km).
+        </p>
+        <p>
+          Par temps dégagé on peut même voir l’archipel des Glénan (environ 15 km).
+        </p>
         </div>
         
       </div>
@@ -83,13 +104,19 @@
           src="./images/photo-concarneau-remake.png"
           class="photo-right"
           width="100%"
-          height="400px"
+          height="400"
           alt="photo-concarneau"
-        />
+        >
         <div class="article">
-        <p><%=articles[12].article%></p>
-        <p><%=articles[13].article%></p>
-        <p><%=articles[14].article%></p>
+        <p>
+          Concarneau est le plus grand port thonier de France. Célèbre pour sa cité fortifée, la Ville bleue attire chaque année de nombreux touristes.
+        </p>
+        <p>
+          La ville s'est développée autour de son port, grâce à l'industrie de la pêche. Construite tout d'abord sur une petite île, la ville s'est renforcée par des fortifications, créant ainsi la célèbre Ville Close. 
+        </p>
+        <p>
+          La partie la plus ancienne de la ville qui a été fortifiée dans les années 1300 ; elle est rattachée au continent par un pont.
+        </p>
         </div>
         
       </div>
@@ -98,32 +125,55 @@
       <h3><span>Carte Google</span></h3>
     </div>
       
-
       <div class="carte-google-maps">
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d27765.21700509397!2d-4.030537344095021!3d47.87370997370242!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sfr!4v1677679902880!5m2!1sfr!2sfr" width="1000" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
 
       <h3><span>Laissez un commentaire</span></h3>
-      <form action="/comments/1">
-      <div class="section-comments">        
-        <div class="comment">
-          <label for="comment">Commentaire*</label><br>
-          <textarea id="comment" name="comment" rows="10" cols="86"></textarea>
-        </div>          
-
+      <form action="/comments/new" method="POST">
+        <div class="section-comments">        
+          <div class="content-comment">
+            <label for="comment">Commentaire*</label><br>
+            <textarea class="comment-text" name="comment" rows="10" cols="86"></textarea>
+          </div>          
+      
           <div class="section-identifiant">
             <div class="pseudo">
               <label for="pseudo">Pseudo*</label><br>
-              <input type="text" autocomplete="off" id="pseudo" />
+              <input 
+                type="text"
+                autocomplete="off" 
+                class="pseudo" 
+                name="pseudo">
             </div>
-           <div class="email">
+            <div class="email">
               <label for="email">Email*</label><br>
-              <input type="text" autocomplete="off" id="email" />
-           </div>            
+              <input 
+                type="text" 
+                autocomplete="off" 
+                class="email" 
+                name="email">
+            </div>            
           </div>
-          <p>Votre adresse e-mail ne sera pas publié. Les champs obligatoires sont indiqués avec *.</p>         
-          <input type="submit" value="Envoyer">
+          <p>Votre adresse e-mail ne sera pas publiée. Les champs obligatoires sont indiqués avec *.</p>         
+          <input type="hidden" name="theme_id" value=1>
+          <input class="btn-formulaire" type="submit" value="Envoyer">
+        </div>
       </form>
       </div>
-          </main>
+      
+      <h3><span>Vos commentaires</span></h3>
+      <div class="carousel">
+        <ul class="carousel-list">
+          <% for(const comment of comments){ %>
+          <li class="carousel-item">
+            <div class="comment">
+              <p class="pseudo-content"><%= comment.pseudo %></p>
+              <p class="comment-content"><%= comment.comment %></p>
+            </div>
+          </li>
+          <% } %>
+        </ul>
+        </div>
+  </main>
 <%- include("_components/footer.html") %>
