--- a/public/styles/commun.css
+++ b/public/styles/commun.css
@@ -1,8 +1,9 @@
 :root {
   --color1: rgb(255, 255, 255);
-  --color2: rgb(51, 196, 255);
+  --color2: rgb(108, 201, 247, 0.4);
   --color3: rgba(10, 10, 10, 0.074);
   --color4: rgb(29, 29, 29);
+  --color5: rgb(59, 153, 201);
   --nav-heigth: 106px;/*hauteur image + margin*/
   --z-index-max: 3;
   --z-index-min: 1;
@@ -38,25 +39,31 @@ h3 {
 img{
   object-fit: cover;
 }
+
+/*----------Nav-bar--------------*/
+
 header {
   background: var(--color1);
   color: var(--color4);
   width: 100%;
   top: 0;
   z-index: var(--z-index-max);
-  
+  padding: 0 4rem;
 }
+
 #navbar {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin: 0.5rem 1rem;
 }
+
 .title-navbar {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .title-navbar > img,
 #iconSearch {
   display: none;
@@ -65,6 +72,7 @@ header {
 #iconUser{
   background: var(--color1);
 }
+
 .hamburger {
   background: rgba(0, 0, 0, 0);
   color: var(--color4);
@@ -76,38 +84,69 @@ header {
   color: var(--color4);
   text-decoration: none;
 }
+#login {
+    border:none;
+}
+
+/*----------------toast login-----------------*/
 
 #connection{
   position: fixed;
   display: flex;
   flex-direction: column;
   align-items: center;
-  top:-15rem;
+  top:-17rem;
   Left:50%;
   padding: 0.5rem;
+  width: 18.75rem;
   transform: translate(-50%,-50%);
   background-color: white;
   border-radius: 5px;
   text-align: center;
-}
-
-#connection input{
-  margin: 0.8rem;
-  padding: 0.2rem;
-  border-radius: 0.5rem;
-  font-size: 1.2rem;
-  padding: 0.5rem;
+  border: solid 0.2rem var(--color2);
 }
 
 #connection.loginactive{
   transition: 1s ease-out;
   top: 25rem;
 }
-
-input[name="connection"], input[name="deconnection"]{
-  color: var(--color1);
-  background: var(--color4);
+.div-btn {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem;
+  width: 15rem;
 }
+.label-password, .label-email {
+  padding: 0.3rem;
+  margin-top: 0.5rem;
+  
+}
+.input-password, .input-email {
+  padding: 0.5rem;
+  margin-top: 0.5rem;
+  font-size: 1.2rem;
+  border-radius: 1rem;
+  border: solid 0.1rem var(--color2);
+}
+.btn-deconnection, .btn-inscription, .connection {
+    border: none;
+    background: linear-gradient(180deg, var(--color2),var(--color5));
+    width: 60%;
+    margin: 12px auto 0;
+    padding: 10px;
+    border-radius: 150px;
+    font-size: 1.2rem;
+    box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    transition: 0.3s ease;
+    color: var(--color1);
+    border: solid 0.1rem var(--color2);
+}
+.deconnection, .inscription {
+font-size: 1rem;
+color: var(--color1);
+}
+
 /**************************************sidebar****************************/
 .visible {
   position: absolute;
@@ -131,6 +170,12 @@ li > a:hover {
 }
 .visible.active {
   left: 0;
+}
+
+
+
+.comment {
+  font-size: 1rem;
 }
 
 /***************************************footer****************************************/
