--- a/public/styles/formulaire.css
+++ b/public/styles/formulaire.css
@@ -1,126 +1,129 @@
   /*******************main*******************************/
-    .inscription{
-        margin: 5rem;
-        position:relative;
-        margin-right:auto;
-        margin-left:auto;
-        width: 50%;
-        min-width: 300px;
-        max-width: 400px;
-        background:var(--color3) ;
-        display: grid;
-        grid-template-rows: repeat(4, 104px);
-        padding: 60px 45px 30px;
-        border-radius: 16px;
-        box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05);
-    }
-    div {
-        transition: 0.2s;
-      }
-      label {
-        letter-spacing: 1px;
-      }
-      input[type="text"],
-      input[type="password"] {
-        margin: 7px 0 7px;
-        border: 1px solid transparent;
-        background: var(--color1);
-        height: 36px;
-        width: 100%;
-        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-        border-radius: 9px;
-        font-size: 1.1rem;
-        padding-left: 10px;
-        transition: 0.2s;
-      }
-      input[type="text"]:focus,
-      input[type="password"]:focus {
-        border: 1px solid #5ef9a4;
-      }
-      span {
-        margin-bottom: 20px;
-        display: block;
-        font-size: 0.8rem;
-        visibility: hidden;
-        opacity: 0;
-        transition: 0.3s;
-        color: red;
-      }
-      #progress-bar {
-        background: red;
-        width: 33%;
-        height: 6px;
-        margin: -2px 0 2px;
-        border-radius: 50px;
-        visibility: hidden;
-        transition: 0.3s;
-      }
-      #security span {
-        display: inline;
-      }
-      input[type="submit"], input[type="button"] {
-        border: none;
-        background: linear-gradient(65deg, var(--color4),var(--color3));
-        width: 50%;
-        margin: 12px auto 0;
-        padding: 10px;
-        border-radius: 150px;
-        font-size: 1.2rem;
-        box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2);
-        cursor: pointer;
-        transition: 0.3s ease;
-      }
-      input[type="submit"], input[type="button"]:hover {
-        filter: brightness(105%);
-        transform: translateX(2px);
-      }
-      .error input {
-        color: red;
-        border: 1px solid rgba(255, 0, 0, 0.527);
-      }
-      .error span {
-        visibility: visible;
-        opacity: 1;
-        color: red;
-      }
-      .progressRed {
-        background: red;
-        width: 33%;
-        visibility: visible;
-      }
-      .progressBlue {
-        background: #16d9e7;
-        width: 67%;
-        visibility: visible;
-      }
-      .progressGreen {
-        width: 100%;
-        background: #5ef9a4;
-        visibility: visible;
-      }
-      
+    #inscription{
+    margin: 10rem 0 5rem 0;
+    position:relative;
+    margin-right:auto;
+    margin-left:auto;
+    width: 50%;
+    min-width: 300px;
+    max-width: 400px;
+    border: solid 0.2rem var(--color2);
+    display: grid;
+    grid-template-rows: repeat(4, 104px);
+    padding: 60px 45px 30px;
+    border-radius: 16px;
+}
+div {
+    transition: 0.2s;
+  }
+  label {
+    letter-spacing: 1px;
+    color: var(--color4);
+  }
+  input[type="text"],
+  input[type="password"] {
+    margin: 7px 0 7px;
+    height: 36px;
+    width: 100%;
+    box-shadow: 0 5px 10px var(--color3);
+    border-radius: 9px;
+    font-size: 1.1rem;
+    padding-left: 0.6rem;
+    transition: 0.2s;
+    border: solid 0.1rem var(--color2);
+  }
+  input[type="text"]:focus,
+  input[type="password"]:focus {
+    border: 1px solid #5ef9a4;
+  }
+  span {
+    margin-bottom: 20px;
+    display: block;
+    font-size: 0.8rem;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.3s;
+    color: red;
+  }
+  input[type="submit"]{
+    border: none;
+    background: linear-gradient(180deg, var(--color2),var(--color5));
+    color: var(--color1);
+    width: 60%;
+    margin: 12px auto 0;
+    padding: 10px;
+    border-radius: 150px;
+    font-size: 1.2rem;
+    cursor: pointer;
+    transition: 0.3s ease;
+    box-shadow: 0 5px 10px var(--color3);
+  }
+  input[type="submit"] {
+    filter: brightness(105%);
+    transform: translateX(2px);
+  }
+  #progress-bar {
+    background: red;
+    width: 33%;
+    height: 6px;
+    margin: -2px 0 2px;
+    border-radius: 50px;
+    visibility: hidden;
+    transition: 0.3s;
+  }
+  #security span {
+    display: inline;
+  }
+  .error input {
+    color: red;
+    border: 1px solid rgba(255, 0, 0, 0.527);
+  }
+  .error span {
+    visibility: visible;
+    opacity: 1;
+    color: red;
+  }
+  .progressRed {
+    background: red;
+    width: 33%;
+    visibility: visible;
+  }
+  .progressBlue {
+    background: #16d9e7;
+    width: 67%;
+    visibility: visible;
+  }
+  .progressGreen {
+    width: 100%;
+    background: #5ef9a4;
+    visibility: visible;
+  }
+  
     /***********************admin**********************/
     
     table, thead, tr, th, td {
       border: 1px solid;
-      padding: 0.2rem;
     }
+    
+    thead, tr, th, td {
+      padding: 1rem;
+    }
+    
+    table{
+      margin-left: auto;
+      margin-right: auto;
+      margin-bottom: 13rem;
+      margin-top: 10rem;
+    }
+    
     
     /********************responsive********************/
     
     @media screen and (min-width: 1024px) {
       .containerForm {
         margin-top: 10rem;
-        /*display: grid;
-        grid-template-columns: 50% 50%;
-        justify-items: center;
-        align-items: center;
-        margin-top: 8rem;*/
+
       }
       .connection, .inscription {
         width: 400px;
-      }
-      .connection > h3 {
-        /*margin-top: -2.4rem;*/
-      }
-    }
+      }}
