--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,10 +3,15 @@
   title: "contact"
 }) %>
 <main>
-        <div class=containerForm>
-          <form id="inscription" action="/inscription" method="POST">
-        <div class="inscription">
+        <div class="div-inscription">
+        <form id="inscription" action="/inscription" method="POST">
+          <% if(message) { %>
+                <p>
+                    <%= message %>
+                </p>
+           <% } %>     
           <h3>Inscription</h3>
+
           <div class="pseudo-container">
             <label for="pseudo">Pseudo</label>
             <input name="pseudo" type="text" autocomplete="off" id="pseudo" />
@@ -15,25 +20,42 @@
 
           <div class="email-container">
             <label for="email">Email</label>
-            <input name="email" type="text" autocomplete="off" id="emailInscription" />
-            <span>Email incorrect</span>
+            <input
+              name="email"
+              type="text"
+              autocomplete="off"
+              id="emailInscription"
+            />
+            <span></span>
           </div>
 
           <div class="password-container">
             <label for="password">Mot de passe</label>
-            <input name="password" type="password" autocomplete="off" id="passwordInscription" />
+            <input
+              name="password"
+              type="password"
+              autocomplete="off"
+              id="passwordInscription"
+            />
             <p id="progress-bar"></p>
             <span></span>
           </div>
 
           <div class="confirm-container">
             <label for="confirm">Confirmer mot de passe</label>
-            <input name="confirm" type="password" autocomplete="off" id="confirm" />
+            <input
+              name="confirm"
+              type="password"
+              autocomplete="off"
+              id="confirm"
+            />
             <span></span>
           </div>
 
           <input type="submit" value="Valider" />
-        </div>
+         
+        </form>
+      </div>
         </form>
       </div>
     </main>
