--- a/templates/kerlouan.html
+++ b/templates/kerlouan.html
@@ -94,27 +94,51 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d42179.77102914259!2d-4.3918678157860755!3d48.6436062316666!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sfr!4v1677680456436!5m2!1sfr!2sfr" width="1000" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
 
-      <h3 class="title"><span>Laissez un commentaire</span></h3>
-      <form action ="comments/2">
-      <div class="section-comments comments">        
-        <div class="comment">
-          <label for="comment">Commentaire*</label><br>
-          <textarea id="comment" name="comment" rows="10" cols="86"></textarea>
-        </div>          
-
+      <h3><span>Laissez un commentaire</span></h3>
+      <form action="/comments/new" method="POST">
+        <div class="section-comments">        
+          <div class="content-comment">
+            <label for="comment">Commentaire*</label><br>
+            <textarea class="comment-text" name="comment" rows="10" cols="86"></textarea>
+          </div>          
+      
           <div class="section-identifiant">
             <div class="pseudo">
               <label for="pseudo">Pseudo*</label><br>
-              <input type="text" autocomplete="off" id="pseudo" />
+              <input 
+                type="text"
+                autocomplete="off" 
+                class="pseudo" 
+                name="pseudo">
             </div>
-           <div class="email">
+            <div class="email">
               <label for="email">Email*</label><br>
-              <input type="text" autocomplete="off" id="email" />
-           </div>            
+              <input 
+                type="text" 
+                autocomplete="off" 
+                class="email" 
+                name="email">
+            </div>            
           </div>
-          <p>Votre adresse e-mail ne sera pas publié. Les champs obligatoires sont indiqués avec *.</p>         
-          <input type="submit" value="Envoyer">
+          <p>Votre adresse e-mail ne sera pas publiée. Les champs obligatoires sont indiqués avec *.</p>         
+          <input type="hidden" name="theme_id" value=2>
+          <input class="btn-formulaire" type="submit" value="Envoyer">
+        </div>
       </form>
+      </div>
+      
+      <h3><span>Vos commentaires</span></h3>
+      <div class="carousel">
+        <ul class="carousel-list">
+          <% for(const comment of comments){ %>
+          <li class="carousel-item">
+            <div class="comment">
+              <p class="pseudo-content"><%= comment.pseudo %></p>
+              <p class="comment-content"><%= comment.comment %></p>
+            </div>
+          </li>
+          <% } %>
+        </ul>
       </div>
     </main>
 <%- include("_components/footer.html") %>
